force-app/main/default/objects/Purchase__c/fields/TotalItems__c.field-meta.xml
<CustomField>
    <fullName>TotalItems__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Items</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>